// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu > can navigate with arrow keys 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r21»"
      aria-describedby="menu-«r21»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with active props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r30»"
      aria-describedby="menu-«r30»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2t»"
      aria-describedby="menu-«r2t»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2k»"
      aria-describedby="menu-«r2k»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2q»"
      aria-describedby="menu-«r2q»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2n»"
      aria-describedby="menu-«r2n»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders bottom 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2b»"
      aria-describedby="menu-«r2b»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2e»"
      aria-describedby="menu-«r2e»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2h»"
      aria-describedby="menu-«r2h»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders top 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r28»"
      aria-describedby="menu-«r28»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders nested 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r1n»"
      aria-describedby="menu-«r1n»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r7»"
      aria-describedby="menu-«r7»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group and labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«rb»"
      aria-describedby="menu-«rb»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r4»"
      aria-describedby="menu-«r4»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«rl»"
      aria-describedby="menu-«rl»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«rf»"
      aria-describedby="menu-«rf»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r0»"
      aria-describedby="menu-«r0»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r1k»"
      aria-describedby="menu-«r1k»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with visible=false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2»"
      aria-describedby="menu-«r2»"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple childs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple complex childs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="styles__w40vpo9"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;
